--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,17 @@
         document.getElementById("latitude").innerHTML = position.coords.latitude;
         document.getElementById("longitude").innerHTML = position.coords.longitude;
       }
+      function output()
+      {
+        const latitude = document.getElementById('latitude').textContent;
+        const longitude = document.getElementById('longitude').textContent;
+        
+        // Send an HTTP request to Flask with the latitude and longitude values
+        const xhr = new XMLHttpRequest();
+        xhr.open('POST', '/update-location', true);
+        xhr.setRequestHeader('Content-Type', 'application/json;charset=UTF-8');
+        xhr.send(JSON.stringify({latitude: latitude, longitude: longitude}));
+      }
     </script>
   </head>
   <body>
@@ -22,5 +33,6 @@
     <button onclick="getLocation()">Get Location</button>
     <p>Latitude: <span id="latitude"></span></p>
     <p>Longitude: <span id="longitude"></span></p>
+    <button onclick="output()">Update</button>
   </body>
 </html>
