--- a/templates/index.html
+++ b/templates/index.html
@@ -15,15 +15,17 @@
         document.getElementById("latitude").innerHTML = position.coords.latitude;
         document.getElementById("longitude").innerHTML = position.coords.longitude;
       }
-      function output()
-      {
+      
+      function output() {
         const latitude = document.getElementById('latitude').textContent;
         const longitude = document.getElementById('longitude').textContent;
-        
-        // Send an HTTP request to Flask with the latitude and longitude values
         const xhr = new XMLHttpRequest();
         xhr.open('POST', '/update-location', true);
         xhr.setRequestHeader('Content-Type', 'application/json;charset=UTF-8');
+        xhr.onload = function() {
+          const responseText = this.responseText;
+          document.getElementById("response").innerHTML = responseText;
+        };
         xhr.send(JSON.stringify({latitude: latitude, longitude: longitude}));
       }
     </script>
@@ -34,5 +36,6 @@
     <p>Latitude: <span id="latitude"></span></p>
     <p>Longitude: <span id="longitude"></span></p>
     <button onclick="output()">Update</button>
+    <div id="response"></div>
   </body>
 </html>
