--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,8 @@
       function showPosition(position) {
         document.getElementById("latitude").innerHTML = position.coords.latitude;
         document.getElementById("longitude").innerHTML = position.coords.longitude;
+        output();
+
       }
       
       function output() {
@@ -35,7 +37,7 @@
     <button onclick="getLocation()">Get Location</button>
     <p>Latitude: <span id="latitude"></span></p>
     <p>Longitude: <span id="longitude"></span></p>
-    <button onclick="output()">Update</button>
+    <!-- <button onclick="output()">Update</button> -->
     <div id="response"></div>
   </body>
 </html>
