--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,93 @@
+#response{
+    width: 70%;
+    height: 50%;
+    background-color: rgb(12, 131, 31);
+    border:none;
+    margin: auto;
+    display: block;
+    margin-top: 7%;    
+    overflow: hidden; 
+    color:whitesmoke;
+}
+
+#response:hover{
+    /* height:fit-content; */
+    overflow: visible;
+}
+
+.bar{
+    width: 10px;
+    height: 10%;
+    background-color: white;
+}
+
+.quotes{
+    color: rgb(12, 131, 31);
+}
+
+.Login{
+    position:absolute;
+    width: 45%;
+    height: fit-content;
+    padding: 10px;
+    left:25vw;
+    top:30%;
+    background-color: whitesmoke;
+    z-index: 1;
+    border:0.1px solid gray;
+    box-shadow:0 0 10px 2px #999999;
+    border-radius: 10px;
+}
+
+.login-title{
+    width: 100%;
+    height: 50px;
+    background-color: rgb(30, 179, 60);
+    position: relative;
+    top:-19px;
+    /* border-top-right-radius: 10px;
+    border-top-left-radius: 10px; */
+    border-radius: 10px;
+}
+
+.login-info{
+    text-align: center;
+}
+
+.login-body{
+    background-color: #dedede;
+    width: 50%;
+    margin: auto;
+    height: 50%;
+}
+
+input, .submit-btn{
+    width: 60%;
+    height: 40px;
+    margin-left: 20%;
+    margin-top: 20px;
+    border: none;
+    outline:none;
+    padding: 7px;
+}
+
+.submit-btn button{
+    width: 100%;
+    height: 40px;
+    border: none;
+    outline:none;
+    background-color: rgb(30, 179, 60);
+}
+
+/* .response-btn{
+    overflow: hidden;
+} */
+
+/* .loc-btn{
+    display: flex;
+    justify-content: center; 
+} */
+
 .iNbwPq {
     width: 50px;
     height: 24px;
