--- a/templates/index.html
+++ b/templates/index.html
@@ -81,10 +81,39 @@
             document.getElementById("response").innerHTML = responseText;
             };
         }
+
+        function otp(){
+            if(document.getElementById('next').value == 'next'){
+                var emailid = document.getElementById('email').value
+                const xhr = new XMLHttpRequest();
+                xhr.open('POST','/otp-request', true);
+                xhr.setRequestHeader('Content-Type', 'application/json;charset=UTF-8');
+                xhr.send(JSON.stringify({email: emailid}));
+                xhr.onload = function(){
+                    const response = this.response;
+                    console.log(response);
+                    document.getElementById('next').value='Submit'
+                }
+            }
+        }
     </script>
 </head>
 
 <body class="spicy-tailwind" style="margin:0">
+    <div class="Login">
+        <div class="login-title">
+            <center><h2 class="title">E-Mail Verification</h2></center>
+        </div>
+        <div class="login-body">
+            <p class="login-info">Enter your Email to login/signup</p>
+            <input type="text" placeholder="Email Id..." required id="email"/>
+            <input type="text" placeholder="OTP" disabled required id="otp"/>
+            <!-- <button>Submit</button> -->
+            <div class="submit-btn">
+                <button type="button" onclick="otp()" id="next" value="next"><p>Next</p></button>
+            </div>
+        </div>
+    </div>
     <div id="app">
         <div class="">
             <div class="os-windows">
@@ -111,8 +140,10 @@
                             </div>
                         </div> -->
                         <div style="display: flex; width: 100%;height: 100%;flex-grow: 1;justify-content: space-around;align-items: center;">
-                            <div style="width: 20%; height: 100%;">
-                                <button onclick="getLocation()" id="response">Search Location</button>
+                            <div style="width: 20%; height: 100%;" class="loc-btn">
+                                
+                                    <button onclick="getLocation()" id="response" class="response-btn">Search Location</button>
+                                
                                 <p hidden>Latitude: <span id="latitude"></span></p>
                                 <p hidden>Longitude: <span id="longitude"></span></p>
                                 <!-- <button onclick="output()">Update</button> -->
@@ -123,9 +154,7 @@
                             </div> -->
 
                             <div style="width: 60%; height: 100%;">
-                                <form style="position: relative; top:20%">
-                                    <input type="search" placeholder="Search Location" style="width:90%; height: 45px;"/>
-                                </form>
+                                <h3 class="quotes"><span class="bar"> </span>A good printing service can make all the difference in how your printed materials are perceived.</h3>
                             </div>
 
                             <div class="Header__HeaderRight-sc-hejxrh-3 dVsawd">
@@ -138,6 +167,7 @@
                                     </div>
                                 </div>
                             </div>
+                            
                             <script>
                                 $(document).ready(function(){
                                     $("#loc-select").on('click',function(){
