--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
             if(document.getElementById('next').value == 'next'){
                 var emailid = document.getElementById('email').value
                 const xhr = new XMLHttpRequest();
-                xhr.open('POST','/otp-request', true);
+                xhr.open('POST','/otp', true);
                 xhr.setRequestHeader('Content-Type', 'application/json;charset=UTF-8');
                 xhr.send(JSON.stringify({email: emailid}));
                 xhr.onload = function(){
