--- a/templates/shopkeeper.html
+++ b/templates/shopkeeper.html
@@ -142,7 +142,7 @@
                         <div style="display: flex; width: 100%;height: 100%;flex-grow: 1;justify-content: space-around;align-items: center;">
                             <div style="width: 20%; height: 100%;" class="loc-btn">
                                 
-                                    <button onclick="getLocation()" id="response" class="response-btn">Search Location</button>
+                                    <!-- <button onclick="getLocation()" id="response" class="response-btn">Search Location</button> -->
                                 
                                 <p hidden>Latitude: <span id="latitude"></span></p>
                                 <p hidden>Longitude: <span id="longitude"></span></p>
@@ -157,21 +157,15 @@
                                 <h3 class="quotes"><span class="bar"> </span>A good printing service can make all the difference in how your printed materials are perceived.</h3>
                             </div>
 
-                            <div>
-                                <form action="/shopkeeper" method="get">
-                                    <button type="submit">Shopkeeper</button>
-                                </form>
-                            </div>
-
                             <div class="Header__HeaderRight-sc-hejxrh-3 dVsawd">
                                 <div class="ProfileButton__Container-sc-975teb-3 liSUTa">
                                     <div class="ProfileButton__Text-sc-975teb-2 bFHCDW">Login</div>
                                 </div>
-                                <div class="CartButton__Container-sc-1fuy2nj-3 eOczDn">
+                                <!-- <div class="CartButton__Container-sc-1fuy2nj-3 eOczDn">
                                     <div class="CartButton__Button-sc-1fuy2nj-5 joEvaa">
                                         <div class="CartButton__Text-sc-1fuy2nj-4 iQAgjV">My Cart</div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             
                             <script>
