--- a/templates/shopkeeper.html
+++ b/templates/shopkeeper.html
@@ -102,12 +102,16 @@
 <body class="spicy-tailwind" style="margin:0">
     <div class="Login">
         <div class="login-title">
-            <center><h2 class="title">E-Mail Verification</h2></center>
+            <center><h2 class="title">SHOP KEEPER REGISTRATION</h2></center>
         </div>
         <div class="login-body">
-            <p class="login-info">Enter your Email to login/signup</p>
+
+            <p class="login-info">Login Details please!..</p>
+            <input type="text" placeholder="Name..." required id="shopkeepname"/>
             <input type="text" placeholder="Email Id..." required id="email"/>
-            <input type="text" placeholder="OTP" disabled required id="otp"/>
+            <button name="button" value="OK" type="button" onclick="update_location()">Location</button>  
+            <input type="text" placeholder="Printer Name"required id="printername"/>
+
             <!-- <button>Submit</button> -->
             <div class="submit-btn">
                 <button type="button" onclick="otp()" id="next" value="next"><p>Next</p></button>
