--- a/templates/shopkeeper.html
+++ b/templates/shopkeeper.html
@@ -109,8 +109,13 @@
             <p class="login-info">Login Details please!..</p>
             <input type="text" placeholder="Name..." required id="shopkeepname"/>
             <input type="text" placeholder="Email Id..." required id="email"/>
+            <div style="text-align: center;">
+
             <button name="button" value="OK" type="button" onclick="update_location()">Location</button>  
-            <input type="text" placeholder="Printer Name"required id="printername"/>
+            </div>
+
+             <input type="text" placeholder="Printer Name"required id="printername"/>
+
 
             <!-- <button>Submit</button> -->
             <div class="submit-btn">
