--- a/templates/index.html
+++ b/templates/index.html
@@ -159,7 +159,7 @@
 
                             <div>
                                 <form action="/shopkeeper" method="get">
-                                    <button type="submit">Shopkeeper</button>
+                                    <button type="submit"id="shopkeeper">Shopkeeper</button>
                                 </form>
                             </div>
 
