--- a/templates/index.html
+++ b/templates/index.html
@@ -112,6 +112,9 @@
                 xhr.onload = function(){
                     const response = this.response;
                     console.log(response);
+                    if(response === 'Success'){
+                        window.location.href="http://127.0.0.1:5000/customer"
+                    }
                     document.getElementById('next1').value='Submit'
                 }
             }
