--- a/templates/customer.html
+++ b/templates/customer.html
@@ -120,7 +120,7 @@
 			<div class="icon">
 				<i class="fa fa-upload"></i>
 			</div>
-			<form action="/upload-file" method="post" enctype="multipart/form-data">
+			<form action="" method="post" enctype="multipart/form-data">
 				<label for="file">Choose a file:</label>
 				<input type="file" name="file" id="file">
 				<label for="copies">Number of copies:</label>
@@ -139,7 +139,7 @@
 					<input type="radio" name="print-side" id="front-and-back" value="front-and-back">
 					<label for="front-and-back">Front and back</label>
 				</div>
-				<input type="submit" value="Upload File">
+				<a href="payment.html"><input type="button" value="Upload File"></a>
 			</form>
 		</div>
 	</div>
