--- a/templates/customer.html
+++ b/templates/customer.html
@@ -104,10 +104,10 @@
                             hello
                         </div> -->
 
-                        <div style="width: 60%; height: 100%;">
+                        <!-- <div style="width: 60%; height: 100%;">
                             
                             <h3 class="quotes"><span class="bar"> </span>A good printing service can make all the difference in how your printed materials are perceived.</h3>
-                        </div>
+                        </div> -->
 
                         <div class="navbar">
                             <a href="#">LOGGED IN</a>
